--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VARtPlayDow</title>
+    <title>VARt Wotcha</title>
     <link rel="shortcut icon" href="https://drive.google.com/uc?export=download&id=1vweCj93nEHMmXDBsbIwt5nfq3ATovqED"
         type="image/jpg">
 
